--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dbStart": "mongod --dbpath=data",
-    "serverStart": "node server/server.js"
+    "start": "npm server/server.js"
   },
   "author": "Joe Jackson",
   "license": "ISC"
